RESOLVED FIXED133047
REGRESSION(r163712): [GTK] Misspelling and grammar underline marks are no longer drawn
https://bugs.webkit.org/show_bug.cgi?id=133047
Summary REGRESSION(r163712): [GTK] Misspelling and grammar underline marks are no lon...
Carlos Garcia Campos
Reported 2014-05-18 03:06:10 PDT
In epiphany I can see the suggestions in the context menu, so it seems the spellchecker is working, but the document marks are not correctly drawn. It works with WebKitGTK+ 2.4.x.
Attachments
Patch (6.20 KB, patch)
2014-05-22 07:01 PDT, Carlos Garcia Campos
darin: review+
Alberto Garcia
Comment 1 2014-05-20 00:26:44 PDT
I'll take a look
Alberto Garcia
Comment 2 2014-05-20 04:48:06 PDT
The regression was introduced in r163712: Change TextIterator to use StringView, preparing to wean it from deprecatedCharacters https://bugs.webkit.org/show_bug.cgi?id=128233
Carlos Garcia Campos
Comment 3 2014-05-22 07:01:29 PDT
Created attachment 231883 [details] Patch I've also changed the whole loop, using a for loop instead, so that we can use the current condition but to continue the loop. I think it improves the readability.
Carlos Garcia Campos
Comment 4 2014-05-22 09:23:43 PDT
Note You need to log in before you can comment on or make changes to this bug.