REGRESSION(r163712): [GTK] Misspelling and grammar underline marks are no longer drawn https://bugs.webkit.org/show_bug.cgi?id=133047

Reviewed by Darin Adler.

Change two conditions changed by mistake in r163712.

* editing/TextCheckingHelper.cpp:
(WebCore::findMisspellings): Enter the loop also when wordStart is 0.
(WebCore::TextCheckingHelper::findFirstMisspelling): Skip the work
when the text is a single character. Also reworked it to use a for
loop to improve the readability.

Canonical link: https://commits.webkit.org/151198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169203 268f45cc-cd09-0410-ab3c-d52691b4dbfc